# TP-2020-Spring-C-C-

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
input_tests/: corrupted_data.txt  invalid_size.txt
linters/: run.sh
project/coordinate_average/: main.c
project/coordinate_average/coord/: coord.c  coord.h
project/coordinate_average/coord_arrays/: coord_arrays.c  coord_arrays.h
project/coordinate_average/parallel/: coord_mean_parall.c  coord_mean_parall.h
project/coordinate_average/sequential/: coord_mean.c  coord_mean.h
project/coordinate_average/tests/: test_coord.cpp  test_coord_arrays.cpp  test_coord_mean.cpp  test_coord_mean_parall.cpp  test_static_parall_vs_dl_parall.cpp  test_static_parall_vs_dl_seq.cpp  test_static_seq_vs_dl_parall.cpp  test_static_seq_vs_dl_seq.cpp  test_utils.cpp
project/coordinate_average/utils/: utils.c  utils.h
project/longest_arth_seq/: longest_arth_seq.c  longest_arth_seq.h  main.c  test_longest_arth_seq.cpp
project/parser/: parse_input.c  parse_input.h  test_parse_input.cpp
test_data/: test_generator.cpp  test_invalid_data.txt  test_invalid_dim.txt  test_invalid_size.txt
